--- a/GUI_App/MainWindow.xaml
+++ b/GUI_App/MainWindow.xaml
@@ -25,6 +25,8 @@
             <DatePicker x:Name="DeathDatePicker" Margin="0,0,0,10"/>
 
             <Button Content="Dodaj osobę" Click="AddPerson_Click"/>
+            <Button Content="Usuń poddrzewo" Click="DeleteSubtree_Click"/>
+            <Button Content="Usuń osobę" Click="DeletePerson_Click"/>
         </StackPanel>
 
         <!-- CANVAS DRZEWA -->
