--- a/GUI_App/MainWindow.xaml
+++ b/GUI_App/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FamilyTreeGraph.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Drzewo Genealogiczne" Height="600" Width="800">
+        Title="Struktura firmy" Height="600" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
@@ -18,10 +18,13 @@
             <TextBlock Text="Nazwisko:" Margin="0,0,0,5"/>
             <TextBox x:Name="SurnameTextBox" Margin="0,0,0,10"/>
 
-            <TextBlock Text="Data urodzenia:" Margin="0,0,0,5"/>
+            <TextBlock Text="Stanowisko:" Margin="0,0,0,5"/>
+            <TextBox x:Name="PositionTextBox" Margin="0,0,0,10"/>
+
+            <TextBlock Text="Data rozpoczęcia:" Margin="0,0,0,5"/>
             <DatePicker x:Name="BirthDatePicker" Margin="0,0,0,10"/>
 
-            <TextBlock Text="Data śmierci:" Margin="0,0,0,5"/>
+            <TextBlock Text="Data zakończenia:" Margin="0,0,0,5"/>
             <DatePicker x:Name="DeathDatePicker" Margin="0,0,0,10"/>
 
             <Button Content="Dodaj osobę" Click="AddPerson_Click"/>
